--- a/src/style.css
+++ b/src/style.css
@@ -127,12 +127,13 @@ opacity:1;
     background-color: burlywood;
 }
 .home{
-    margin: 0px;
-    padding: 300px;
-    
+    margin: 0px auto 0px auto;
+    padding: 350px;
+    padding-right: 200px;
     background-image: url("/static/images/bg.jpg");
-    background-color: burlywood;
-    width: '100px';
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
     height: '100px';
     border:'3px' solid#000000;
 }
@@ -287,3 +288,4 @@ opacity:1;
     opacity: '0';
     cursor: pointer;
 }
+.mySlides {display:none;}
