--- a/src/style.css
+++ b/src/style.css
@@ -94,38 +94,37 @@ opacity:1;
     margin: 0px;
     padding: 100px;
     background-image: url("/static/images/B01.jpg");
-    width: '1152px';
-    height: '678px';
+    /* width: '1152px';
+    height: '678px'; */
     background-color: burlywood;
 }
 .page2{
     margin: 0px;
     padding: 100px;
-   
+    /* width: '1152px';
+    height: '678px'; */
     background-image: url("/static/images/B02.jpg");
-    background-color: burlywood;
 }
-    .page3{
+.page3{
     margin: 0px;
     padding: 100px;
-    
+    /* width: '1152px';
+    height: '678px'; */
     background-image: url("/static/images/B03.jpg");
-    background-color: burlywood;
 }
 .page4{
     margin: 0px;
     padding: 100px;
-
     background-image: url("/static/images/B04.jpg");
     background-color: burlywood;
 }
 .page5{
     margin: 0px;
     padding: 100px;
-
     background-image: url("/static/images/B05.jpg");
     background-color: burlywood;
 }
+
 .home{
     margin: 0px auto 0px auto;
     padding: 350px;
@@ -135,6 +134,51 @@ opacity:1;
     background-size: cover;
     width: auto;
     height: '100px';
+    border:'3px' solid#000000;
+}
+.BoxTop1{
+    margin: 0px auto 0px auto;
+    padding: 50px;
+    padding-right: 200px;
+    background-image: url("/static/images/Rectangle 2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
+    height: '100px';
+    border:'3px' solid#000000;
+}
+
+.BoxTop2{
+    margin: 0px auto 0px auto;
+    padding: 50px;
+    padding-right: 200px;
+    background-image: url("/static/images/Rectangle 2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
+    height: '100px';
+    border:'3px' solid#000000;
+}
+.BoxTop3{
+    margin: 0px auto 0px auto;
+    padding: 50px;
+    padding-right: 200px;
+    background-image: url("/static/images/Rectangle 2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
+    height: '100px';
+    border:'3px' solid#000000;
+}
+.BoxTop4{
+    margin: 0px auto 0px auto;
+    padding: 50px;
+    padding-right: 200px;
+    background-image: url("/static/images/Rectangle 2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;
+    height: '100px' ;
     border:'3px' solid#000000;
 }
 .contbtn{
