--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ margin: auto;
     position: relative;
     display: inline-block;
    }
-.overlay{
+/*.overlay{
     position: absolute;
     top: 0;
     bottom: 0;
@@ -32,21 +32,21 @@ margin: auto;
 }
 /* .img-container:hover.overlay.back-btn{
     opacity:0;
-    } */
+    } 
 .img-container:hover.overlay.next-btn{
     opacity:0;
-    }
+    }*/
 /* .img-container:hover.back-btn2{
 opacity:1;
 }*/
-.img-container:hover.next-btn2{
+/*.img-container:hover.next-btn2{
 opacity:1;
 }
 .back-btn{
  position: absolute;
  display: block;
 top: 10rem;
-/* opacity: 1; */
+/* opacity: 1; 
 cursor: pointer;
 }
 .next-btn{
@@ -54,9 +54,9 @@ cursor: pointer;
     display: block;
    bottom: 10rem;
    right: 2%;
-    /* opacity: 1; */
+    /* opacity: 1; 
     cursor: pointer;
-}
+}*/
  /* .back-btn2{
     position: absolute;
     display: block;
@@ -64,7 +64,7 @@ cursor: pointer;
     opacity: 1;
     cursor: pointer;
    } */
-.next-btn2{
+/*.next-btn2{
        position: absolute;
        display: block;
        bottom: 10rem;
@@ -80,7 +80,7 @@ cursor: pointer;
 }
 .con2-container:hover .content2-btn{
     opacity:0;
-    }
+    }*/
 
 .con-container:hover .content-btn2{
 opacity:1;
@@ -127,58 +127,14 @@ opacity:1;
 
 .home{
     margin: 0px auto 0px auto;
-    padding: 350px;
-    padding-right: 200px;
+    padding: 100px;
+    padding-right: 50px;
+    padding-left:100px;
     background-image: url("/static/images/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: auto;
-    height: '100px';
-    border:'3px' solid#000000;
-}
-.BoxTop1{
-    margin: 0px auto 0px auto;
-    padding: 50px;
-    padding-right: 200px;
-    background-image: url("/static/images/Rectangle 2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: auto;
-    height: '100px';
-    border:'3px' solid#000000;
-}
-
-.BoxTop2{
-    margin: 0px auto 0px auto;
-    padding: 50px;
-    padding-right: 200px;
-    background-image: url("/static/images/Rectangle 2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: auto;
-    height: '100px';
-    border:'3px' solid#000000;
-}
-.BoxTop3{
-    margin: 0px auto 0px auto;
-    padding: 50px;
-    padding-right: 200px;
-    background-image: url("/static/images/Rectangle 2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: auto;
-    height: '100px';
-    border:'3px' solid#000000;
-}
-.BoxTop4{
-    margin: 0px auto 0px auto;
-    padding: 50px;
-    padding-right: 200px;
-    background-image: url("/static/images/Rectangle 2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: auto;
-    height: '100px' ;
+    height: 550px;
     border:'3px' solid#000000;
 }
 .contbtn{
@@ -186,7 +142,7 @@ opacity:1;
     display: block;
    bottom: 10rem;
    right: 2%;
-      /* opacity: 1; */
+       opacity: 1; 
     cursor: pointer
 }
 .contbtn2{
@@ -194,7 +150,7 @@ opacity:1;
     display: block;
    bottom: 10rem;
    right: 2%;
-    /* opacity: 1; */
+     opacity: 1; 
     cursor: pointer
 } 
 
@@ -237,13 +193,13 @@ opacity:1;
     top: 20rem;
     opacity: '0';
     cursor: pointer;
-}
+}*/
 .con-container{
     margin: '-100px';
     position: relative;
     
 }
-.con-container:hover .content1-btn{
+/*.con-container:hover .content1-btn{
     opacity:'0';
 }
 .con-container:hover .content1-btn2{
@@ -331,5 +287,50 @@ opacity:1;
     top: 35rem;
     opacity: '0';
     cursor: pointer;
-}
+}*/
 .mySlides {display:none;}
+
+.button {
+    border: none;
+    color: white;
+    width: 150px;
+    height: 65px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    font: Niramit Medium;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
+    @import url('https://fonts.googleapis.com/css?family=Niramit:500&display=swap');
+    font-family: 'Niramit', sans-serif;
+  }
+
+
+  .button1 {
+    background-color: #FFCC66; 
+    color: white; 
+    border: 8px solid #FFCC66	;
+    border-radius: 8px;
+    width: 150px;
+    height: 65px;
+  }
+  
+  .button1:hover {
+    background-color: gray	;
+    color: white;
+    border: 8px solid gray
+  }
+
+  .page7{
+    margin: 0px;
+    padding: 100px;
+    background-image: url("/static/images/B04.jpg");
+    background-color: burlywood;
+  }
+  .credit {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
